Reetan.Nayak Dev 25/force-app/main/default/objects/Faculty__c/Faculty__c.object-meta.xml
<CustomObject>
    <label>Faculty</label>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Faculty</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>