Reetan.Nayak Dev 25/force-app/main/default/objects/Faculty__c/fields/Course_Details__c.field-meta.xml
<CustomField>
    <fullName>Course_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Course Details</label>
    <type>Checkbox</type>
</CustomField>