Reetan.Nayak Dev 25/force-app/main/default/objects/Faculty__c/fields/Course_Offered__c.field-meta.xml
<CustomField>
    <fullName>Course_Offered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Course Offered</label>
    <type>Checkbox</type>
</CustomField>