Reetan.Nayak Dev 25/force-app/main/default/objects/Faculty__c/fields/Courses__c.field-meta.xml
<CustomField>
    <fullName>Courses__c</fullName>
    <label>Courses</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Force</fullName>
            </value>
            <value>
                <fullName>JAVA</fullName>
            </value>
            <value>
                <fullName>.NET</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>