Reetan.Nayak Dev 25/force-app/main/default/objects/Faculty__c/fields/Courses_Association__c.field-meta.xml
<CustomField>
    <fullName>Courses_Association__c</fullName>
    <label>Courses Association</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Advanced Developer</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Advanced Administrator</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>