Reetan.Nayak Dev 25/force-app/main/default/objects/Faculty__c/fields/Login_ID__c.field-meta.xml
<CustomField>
    <fullName>Login_ID__c</fullName>
    <label>Login ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>