Reetan.Nayak Dev 25/force-app/main/default/objects/Faculty__c/fields/Programs__c.field-meta.xml
<CustomField>
    <fullName>Programs__c</fullName>
    <label>Programs</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Courses__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>APEX</fullName>
            </value>
            <value>
                <fullName>Asp.NET</fullName>
            </value>
            <value>
                <fullName>C#.NET</fullName>
            </value>
            <value>
                <fullName>Core Java</fullName>
            </value>
            <value>
                <fullName>JSP</fullName>
            </value>
            <value>
                <fullName>Oracle- 9i</fullName>
            </value>
            <value>
                <fullName>PLSQL</fullName>
            </value>
            <value>
                <fullName>RUBY</fullName>
            </value>
            <value>
                <fullName>Servlets</fullName>
            </value>
            <value>
                <fullName>SOQL</fullName>
            </value>
            <value>
                <fullName>SQL</fullName>
            </value>
            <value>
                <fullName>Struts</fullName>
            </value>
            <value>
                <fullName>Trigger</fullName>
            </value>
            <value>
                <fullName>VB.NET</fullName>
            </value>
            <value>
                <fullName>VisualForce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>