Reetan.Nayak Dev 25/force-app/main/default/objects/Faculty__c/fields/Technology_Experts__c.field-meta.xml
<CustomField>
    <fullName>Technology_Experts__c</fullName>
    <label>Technology Experts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>JAVA</fullName>
            </value>
            <value>
                <fullName>APEX</fullName>
            </value>
            <value>
                <fullName>SOQL</fullName>
            </value>
            <value>
                <fullName>ORACLE</fullName>
            </value>
            <value>
                <fullName>Visual Force</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>