Reetan.Nayak Dev 25/force-app/main/default/objects/Faculty__c/fields/Test_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Test_Questionnaire__c</fullName>
    <label>Test Questionnaire</label>
    <type>TextArea</type>
</CustomField>