Reetan.Nayak Dev 25/force-app/main/default/objects/Faculty__c/fields/Work_Experience__c.field-meta.xml
<CustomField>
    <fullName>Work_Experience__c</fullName>
    <label>Work Experience</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>